--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 dependencies = [
+    "brown-clustering>=0.1.6",
     "datasets>=3.1.0",
     "matplotlib>=3.7.5",
     "mosestokenizer>=1.2.1",
@@ -49,6 +50,7 @@ dependencies = [
     "scikit-learn>=0.16,!=0.22.0", # check_array, check_is_fitted.
     "scipy>=0.19",
     "tqdm>=4.67.1",
+    "tqdm-joblib>=0.0.4",
 ]
 dynamic = ["version"]
 
